# stm8_serial_eeprom

./: CMakeLists.txt  Makefile  Toolchain-sdcc.cmake  lt200_dongle.ihx
inc/: clock.h  crc16.h  eeprom.h  gpio.h  stm8s.h  stm8s003.h  typedef.h
src/: clock.c  crc16.c  eeprom.c  lt200_dongle.c  main.c
stm8/trunk/: README.md
stm8/trunk/sources/: CMakeLists.txt  Makefile  Toolchain-sdcc.cmake
stm8/trunk/sources/inc/: crc16.h
stm8/trunk/sources/src/: crc16.c  eeprom.c  lt200_dongle.c
stm8/trunk/sources/stm8_hal/: stm8s.h  stm8s_uart1.c
stm8/trunk/tools/: 99-stmlink.rules  README.md
stm8_hal/: stm8s.h  stm8s_conf.h  stm8s_uart1.c
